--- a/deployment/pipelines/build-publish-nuget.yml
+++ b/deployment/pipelines/build-publish-nuget.yml
@@ -1,41 +1,62 @@
-name: 0.1.$(Date:yyMMdd)$(Rev:.r)
-
-parameters:
-- name: buildConfiguration
-  displayName: 'Build Configuration'
-  type: string
-  default: 'Release'
-  values:
-  - 'Release'
-  - 'Debug'
-- name: buildPlatform
-  displayName: 'Build Platform'
-  type: string
-  default: 'Any CPU'
-  values:
-  - 'Any CPU'
-  - 'x64'
-  - 'x86'
-
-trigger:
-   batch: True
-   branches:
-     include:
-     - 'feature/*'
-     - 'main'
+name: 0.1$(Rev:.r)
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
+trigger:
+  batch: true
+  paths:
+    exclude:
+    - deployment
+        
 variables:
-  solution: '**/*.sln'
+- group: UnitTests_AppSettings
+- name: BuildPlatform
+  value: 'Any CPU'
+- name: BuildConfiguration
+  value: 'NuGetRelease'
+- name: System.Debug
+  value: true
 
 steps:
-- task: NuGetAuthenticate@1
-
-- task: UseDotNet@2
-  displayName: 'Install .NET Core SDK'
+- task: PowerShell@2
+  displayName: 'Set NuGet Package Version Number'
   inputs:
-    packageType: sdk
-    version: '8.0.x'
-    performMultiLevelLookup: true
+    filePath: 'Deployment/Scripts/SetNuGetPackageVersion.ps1'
+    arguments: '-branch "$(Build.SourceBranch)" -buildNumber "$(Build.BuildNumber)"'
+
+- template: 'templates/build-solution.yml'
+
+# - task: DotNetCoreCLI@2
+#   displayName: 'Pack NuGet'
+#   condition: and(succeeded(), eq(variables.CreateNuGetPackage, 'true'))
+#   inputs:
+#     command: 'pack'
+#     packagesToPack: '$(Build.SourcesDirectory)\Vermaat.Crm.Specflow\Vermaat.Crm.Specflow.csproj;$(Build.SourcesDirectory)\Vermaat.Crm.Specflow.Expressions\Vermaat.Crm.Specflow.Expressions.csproj'
+#     nobuild: true
+#     includesymbols: true
+#     includesource: true
+#     versioningScheme: 'byEnvVar'
+#     versionEnvVar: 'NuGetVersion'
+
+
+# - task: NuGetCommand@2
+#   displayName: 'NuGet push'
+#   condition: and(succeeded(), eq(variables.CreateNuGetPackage, 'true'))
+#   inputs:
+#     command: push
+#     nuGetFeedType: external
+#     publishFeedCredentials: NuGet.org
+
+# - task: CopyFiles@2
+#   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+#   inputs:
+#     SourceFolder: '$(system.defaultworkingdirectory)'
+#     Contents: '**\bin\$(BuildConfiguration)\**'
+#     TargetFolder: '$(build.artifactstagingdirectory)'
+
+# - task: PublishBuildArtifacts@1
+#   displayName: 'Publish Artifact'
+#   inputs:
+#     PathtoPublish: '$(build.artifactstagingdirectory)'
+#     ArtifactName: CI
